# qt_st

./: .gitignore
CMakeByHand/: MainWindow.cpp  MainWindow.h  MainWindow.ui
CSSStyle/: CSSStyle.pro  mainwindow.cpp  mainwindow.ui
ExternalLibrary/: ExternalLibrary.pro  MainWindow.cpp
ExternalLibs/SimpleLib/: .gitignore  CMakeLists.txt  README  SimpleLib.cpp  SimpleLib.h
Layouts/: Layouts.pro  dialog.ui
LineChartLog/: LineChartLog.pro  MainWindow.cpp  MainWindow.h
ListWidget/: ListWidget.pro  dialog.cpp  dialog.h  dialog.ui
Localization/: Dialog.cpp  Dialog.ui  Localization.pro  main.cpp  res.qrc
Localization/res/: hellotr_la.qm  hellotr_la.ts  hellotr_zh_CN.qm  hellotr_zh_CN.ts
QtConsole/HelloWorld/: main.cpp
QtConsole/build-HelloWorld-Desktop_Qt_5_13_0_MinGW_32_bit-Debug/: Makefile  Makefile.Debug  Makefile.Release
QtGuiApplication1/: QtGuiApplication1.sln
QtGuiApplication1/QtGuiApplication1/: QtGuiApplication1.cpp  QtGuiApplication1.h  QtGuiApplication1.ui  QtGuiApplication1.vcxproj
SimpleGUI/: SimpleGUI.pro  mainwindow.cpp  mainwindow.ui
StateMachine/: HelpDialog.cpp  HelpDialog.h  HelpDialog.ui  PrintFilterObject.cpp  PrintFilterObject.h  StateMachine.pro  dialog.cpp  dialog.h  dialog.ui  main.cpp  res.qrc
